--- a/README
+++ b/README
@@ -2,12 +2,12 @@
 %   Scheme: 'defaults', 'solarized-dark', 'monokai-dark'
 %   They are not really those schemes but my approximations
 %   The 'defaults' scheme doesn't restore anything, just sets values close
-%   to the default ones.
+%   to the default ones! Because doing it right seems very annoying!
 %
 %   Ripped off from various sources, tweaked to my liking. Thoroughly
 %   undebugged. IT CAN KILL YOU!
 %
 %   Tested only with R2013a and whatever options I use.
 %   If something breaks: restore the defaults on the preference pane.
-%   If everything breaks: delete your preferences file (you'll lose stuff)
+%   If everything breaks: delete your preferences file (you'll lose stuff).
 %   Questions: etru 1 9   2 7 at gmail dot com
