--- a/README
+++ b/README
@@ -1,13 +1,15 @@
 % function color_scheme(scheme)
 %   Scheme: 'defaults', 'solarized-dark', 'monokai-dark'
 %   They are not really those schemes but my approximations
-%   The 'defaults' scheme doesn't restore anything, just sets values close
-%   to the default ones! Because doing it right seems very annoying!
+%   IMPORTANT: The 'defaults' scheme doesn't actually restore anything,
+%   it just sets values close to the default ones! I don't know how to
+%   do it properly and I don't care enough. You might!
 %
 %   Ripped off from various sources, tweaked to my liking. Thoroughly
-%   undebugged. IT CAN KILL YOU!
+%   untested. Use it at your own risk.
 %
-%   Tested only with R2013a and whatever options I use.
+%   Tried it only with R2013a (os x/linux) and whatever options I use.
 %   If something breaks: restore the defaults on the preference pane.
-%   If everything breaks: delete your preferences file (you'll lose stuff).
-%   Questions: etru 1 9   2 7 at gmail dot com
+%   If everything breaks: you can delete your preferences file (you'll
+%   lose stuff!).
+%   Questions: et   ru 1 9   2 7 at gmail dot com
